force-app/main/default/objects/Attendance__c/fields/Check_In_Time__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Time__c</fullName>
    <inlineHelpText>Pick check in time</inlineHelpText>
    <label>Check In Time</label>
    <required>true</required>
    <type>Time</type>
</CustomField>