force-app/main/default/objects/Attendance__c/fields/Check_out_Time__c.field-meta.xml
<CustomField>
    <fullName>Check_out_Time__c</fullName>
    <label>Check out Time</label>
    <type>Time</type>
</CustomField>