force-app/main/default/objects/Attendance__c/fields/Enrolled_Program__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_Program__c</fullName>
    <formula>Student_Name__r.Program__r.Name</formula>
    <label>Enrolled Program</label>
    <type>Text</type>
</CustomField>