force-app/main/default/objects/Attendance__c/fields/Pick_Up_Person__c.field-meta.xml
<CustomField>
    <fullName>Pick_Up_Person__c</fullName>
    <label>Pick Up Person</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mother</fullName>
                <default>true</default>
                <label>Mother</label>
            </value>
            <value>
                <fullName>Family Friend</fullName>
            </value>
            <value>
                <fullName>Father</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>