force-app/main/default/objects/Attendance__c/fields/Student_Name__c.field-meta.xml
<CustomField>
    <fullName>Student_Name__c</fullName>
    <inlineHelpText>This is a reference to Enrollment Record</inlineHelpText>
    <label>Student Name</label>
    <referenceTo>Enrollment__c</referenceTo>
    <relationshipLabel>Attendance</relationshipLabel>
    <relationshipName>Attendance</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>